<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="self"
            type="com.github.kr328.clash.design.SettingsDesign" />

        <import type="com.github.kr328.clash.design.SettingsDesign.Request" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:paddingStart="@{self.surface.insets.start}"
        android:paddingEnd="@{self.surface.insets.end}">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AppToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@{self.surface.insets.top}" />

        <com.github.kr328.clash.design.view.ObservableScrollView
            android:id="@+id/scroll_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/toolbar_height"
            android:paddingTop="@{self.surface.insets.top}"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="4dp"
                android:paddingBottom="@{self.surface.insets.bottom}">

                <com.github.kr328.clash.design.view.ActionLabel
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> self.request(Request.StartApp)}"
                    app:icon="@drawable/ic_baseline_settings"
                    app:text="@string/app" />

                <com.github.kr328.clash.design.view.ActionLabel
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> self.request(Request.StartTheme)}"
                    app:icon="@drawable/ic_baseline_brightness_4"
                    app:text="@string/theme_settings" />

                <com.github.kr328.clash.design.view.ActionLabel
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> self.request(Request.StartAdvanced)}"
                    app:icon="@drawable/ic_baseline_extension"
                    app:text="@string/advanced_settings" />

                <com.github.kr328.clash.design.view.ActionLabel
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> self.request(Request.StartLogs)}"
                    app:icon="@drawable/ic_baseline_article"
                    app:text="@string/logs" />

                <com.github.kr328.clash.design.view.ActionLabel
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> self.request(Request.StartAbout)}"
                    app:icon="@drawable/ic_baseline_info"
                    app:text="@string/about" />

            </LinearLayout>
        </com.github.kr328.clash.design.view.ObservableScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
